Fix [#37324] Crash, calling Warp operator in Outliner

Warp needs a valid 3DView region...